style sheet added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second Github Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Well practicing Html seems boring at first</h1>
+    <h2>But it also alarming that I am not compeleing my tasks even after I paid for them</h2>
+    <h3>All I want in this point in my life is to get serious and aquire any skill posible</h3>
+    <h4>Moreover I am trying to move in Finland</h4>
+    <h5>Only Almighty <strong>ALLAH</strong> knows what will happen top me</h5>
 </body>
 </html>
